GPC/tests/examples/fail/errArith.gpc


void GPRM::Test::errArith() {
    return 3 < 3.0;
}
